app/styles/app.less
@import 'mixins';

@parFontSize: 20;
@parFontSizePx: 20px;
@contentParaWidth: 620px;

@orange:      rgb(253, 137, 57);
@trspOrange:  rgba(253, 137, 57, 0.4);
@darkOrange:  darken(@orange, 15%);
@cream:       rgb(254, 255, 230);
@lightCream:  lighten(@cream, 4%);
@trspCream:   rgba(254, 255, 230,0.3);
@darkBrown:   #170f0b;
@trspBlack:   rgba(0,0,0,0.5);

body {
  font-size: 100%;
  line-height: 1.5;
  color: #333;
  background-color: @lightCream; 
}

.navbar.special-feature {
  margin-bottom: 0;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 20;
  width: 100%;
  padding: 8px 0px;
  .transform(translateZ(0));
  .brand {
    margin-left: 5px;
    width: 200px;
    &.brand-center {
      position: absolute;
      left: 0;
    }
  }
}

.series-title,
.article-title {
  opacity: 0;
  .transition(opacity 2s ease-in-out);
  &.visible {
    opacity: 1;
  }
}

.series-title {
  float: left;
  margin-left: 5px;
  color: @gray;
  font-size: 2em;
  font-family: @serifFontFamily;
  font-weight: 400;
  line-height: 36px;
  &:hover {
    color: @orange;
    text-decoration: none;
  };
}

.article-title {
  display: block;
  width: 400px;
  font-size: 1.6em;
  line-height: 32px;
  margin: 0 auto;
  position: relative;
  color: @cream;
  font-family: @sansFontFamily;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: .2em;
}

.article-navs {
  @articleNavHeight: 200px;
  @navbarHeight: 48px;
  position: fixed;
  width: 100%;
  height: @articleNavHeight;
  top: @navbarHeight - @articleNavHeight;
  z-index: 3;
  .transform(translateZ(0));
  .transition(top 0.5s ease-in-out);
  background-color: #1b1b1b;
  text-align: left;
  color: #eee;
  &.visible {
    top: @navbarHeight;
  }
  .nav {
    width: 100%;
    margin-top: 12px;
  }
  .article-nav {
    width: 20%;
    margin-left: 5%;
    height: 100%;
    position: relative;
    float: left;
  }
  .article-nav-title {
    font-family: @serifFontFamily;
    font-size: 2em;
  }
  .article-nav-subtitle {
    font-family: @serifFontFamily;
  }
  .image {
    background-image: url('/images/6.jpg');
    background-size: cover;
    width: 70%;
    height: 120px;
  }
  .overlay-anchor {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

#main {
  // Spacer for the sticky navbar
  margin-top: 48px;
}

.article-header {
  position: relative;
  padding: 2em;
  .font-size(@parFontSize);
//  height: 100vh;
  max-width: 100%;

  .header {
    text-align: center;
    font-size: 2em;
    .font-size(@parFontSize * 2);
    font-family: @sansFontFamily;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 1.2em;
    letter-spacing: 0.8em;
    word-spacing: 0.3em;
    text-shadow: 0 1px 1px @grayLight;
    color: @orange;
    margin-bottom: 1em;
  }
  .byline {
    max-width: @contentParaWidth * 1.4;
    font-size: 1.2em;
    line-height: 1.3em;
    text-shadow: 0 -1px 0 @white;
    font-family: @sansFontFamily;
    font-weight: 700;
    text-align: center;
    margin: 0 auto;
    color: @grayDark;
  }
  .author {
    font-size: 0.8em;
    text-transform: uppercase;
    margin-top: 1em;
    color: @gray;
  }

  .author {
    letter-spacing: .2em;
    line-height: 1.4em;
    font-size: 0.8em;
    text-transform: uppercase;
    margin: 0;
    margin-bottom: 1em;
    padding: 3em 0 1em 0;
    display: inline-block;
    text-align: center; 
    width: 100%;
    &:before {
      content: " ";
      border-bottom: 1px dotted @orange;
      .font-size(@parFontSize);
      width: @contentParaWidth;
      left: 50%;
      margin-left: -1 * (@contentParaWidth / 2);
      top: .6em;
      display: block;
      position: relative;
      z-index: -2;
    }
    .blockout {
      content: " ";
      z-index: -1;
      width: auto;        
      display: inline-block;
      margin: 0 auto;
      padding: 0 .9em;
      background-color: @lightCream; 
    }
  }

  .image {
    height: 60vh;
    top: 0;
    left: 0;
    z-index: 1;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    // IE8 polyfill for `background-size: cover;`
    // -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='path_relative_to_the_HTML_file', sizingMethod='scale')";
    .box-shadow(0 0  1px @trspBlack);
    .border-radius(3px);
  }
}

.chapters {
  max-width: none;
  padding: 2em 1.5em 1em 1.5em;
  margin: 0 auto;
  height: 200px;
  background-color: rgba(0,0,0,0.1);
  .chapter {
    width: 20%;
    height: 100%;
    float: left;
    margin-right: 6%;
    position: relative;
    &:last-child {
      margin-right: 0;
    }
    .image {
      background-image: url('/images/6.jpg');
      background-size: cover;
      height: 80%;
    }
    .title {
      display: inline-block;
      font-weight: 600;
      .font-size(@parFontSize);
    }
    .overlay-anchor {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
    &.bad-monks .image {
      background-image: url('/images/srilanka068.jpg');
    }
  }
}

.content {
  padding-top: 2em;
  position: relative;
  .font-size(@parFontSize);
  p {
    max-width: @contentParaWidth;
    margin: 0 auto;
    font-family: @serifFontFamily;
    .font-size(@parFontSize);
    word-wrap: break-word;
    padding-left: 20px;
    padding-right: 20px;
    margin-bottom: 1.4em;
    &:last-child {
     // padding-bottom: 1.4em;
    }
  }
  & > p:first-of-type {
    font-weight: bold;
    line-height: 1.4;
    &:first-letter {
      font-size: 3em;
      float: left;
      line-height: .73;
      margin: 6px 10px 0 0px;
      text-indent: -5px;
      font-family: @sansFontFamily;
      font-weight: 400;
    }
  }
  .pull-quote {
    max-width: @contentParaWidth * 1.4;
    margin: 0 auto;
    background-color: @white;
    box-shadow: 0 0 1px @trspBlack; 
    .border-radius(3px);
    > img { .border-top-radius(3px); }
    padding: 0;
    &.pull-right,
    &.pull-left {
      max-width: @contentParaWidth;
      margin-left: 1em;
      margin-right: 1em;
      p {
        &:last-child {
          margin-bottom: 0;
        }
      }
      img {
        margin-bottom: 1em;
      }
    }
    &.text {
      background-color: transparent;
      .border-radius(0);
      .box-shadow(none); 
      letter-spacing: .1em;
      margin: 0 auto 1em auto;
      padding: 0;
      border-top: 1px dotted @orange;
      border-bottom: 1px dotted @orange;
      p {
        font-size: 1.6em;
        color: @darkOrange;
        text-shadow: 0 -1px 0 @white;
        font-family: @sansFontFamily;
        text-transform: uppercase;
        font-weight: 600;
        text-align: center;
        padding: 1em;
        margin-bottom: 0;
      }
    }
    &.large-image {
      max-width: @contentParaWidth * 1.75;
    }
    p {
      font-family: @sansFontFamily;
      color: @gray;
      max-width: 100%;
      line-height: 1.5;
      padding: 1em;
      font-size: 0.75em;
    }
  }
}

.next-chapter {
  max-width: @contentParaWidth;
  margin: 4em auto 3em auto;
  .font-size(@parFontSize);
  .call-to-action {
    display: block;
    width: 100%;
    text-align: right;
    color: #000;
    font-weight: 600;
  }
}

// Article specific styling
article {
  &.introduction {
    .article-header {
      height: 70vh;
      padding: 0;
      .header,
      .byline,
      .author,
      .image {
        position: absolute;
        text-align: center;
        z-index: 2;
        width: 100%;
      }
      .header {
        top: 44%;
        color: @cream;
        text-shadow: 0 0 80px @trspBlack, 0 1px 2px @darkBrown;
      }


      .byline {
        text-shadow: 0 0 5px @trspBlack;
        letter-spacing: .2em;
        line-height: 1.4em;
        font-size: 0.8em;
        text-transform: uppercase;
        top: 60%;
        max-width: none;
        color: @orange;
      }
      .author {
        bottom: 0%;
        margin-bottom: 0;
        top: auto;
        color: @white;
        text-shadow: 0 0 5px @trspBlack;
        #gradient > .vertical-three-colors(rgba(0,0,0,0), @darkBrown, 100%, @darkBrown);
        background-color: transparent;
        &:before {
          border-bottom-color: @trspOrange;
          content: " ";
          border-bottom: 1px dotted @trspOrange;
          .font-size(@parFontSize);
          width: @contentParaWidth;
          left: 50%;
          margin-left: -1 * (@contentParaWidth / 2);
          top: .6em;
          display: block;
          position: relative;
          z-index: -1;
        }
        .blockout {
          background: #020101; // pinched from silhouette
        }
      }
      .image {
        height: 100%;
        z-index: 1;
      }
    }
    .content {
      background-color: @darkBrown;
      > p {
        color: @cream;
        &:last-child {
          padding-bottom: 1.4em;
        }
      }

      .pull-quote {
        p {
          color: @orange;
          text-shadow: 0 1px 0 @trspCream, 0 -1px 0 @black;
        }
        border-top-color: @trspOrange;
        border-bottom-color: @trspOrange;
      }

    }
  }
  &.bad-monks {

  }
}

body.loading {
  background: #333;
  #main {
    display: none;
  }
  .pre-load-background {
    display: block;
  }
}

.rotation-frames() {
  0% {
    .transform(rotate(0deg));
  }
  100% {
    .transform(rotate(-360deg));
  }
}

.pre-load-background {
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  background: url(/images/loader.svg) center center no-repeat transparent;
  background-size: 60px auto;
  .animation(spin 2s infinite linear);
  @-webkit-keyframes spin {.rotation-frames;}
  @-moz-keyframes spin {.rotation-frames}
  @-ms-keyframes spin {.rotation-frames}
  @-o-keyframes spin {.rotation-frames}
  @keyframes spin {.rotation-frames}
}

::selection {
  background: @orange;
  color: @white;
  text-shadow: none;
}
::-moz-selection {
  background: @orange; 
  color: @white;
  text-shadow: none;
}

